feat: add css for testimonials

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -322,114 +322,121 @@
           </button>
         </div>
       </section>
-      <section class="testimonials">
-        <h3 class="testiomonials__heading">Testimonials</h3>
-        <div class="testimonials-wrapper">
-          <div class="testimonial">
-            <div class="testimonial__header">
-              <img
-                src="../../assets/icons/user_icon.svg"
-                alt="User"
-                class="testimonial__image"
-              />
-              <p class="testimonial__name">Michael John</p>
-              <p class="testimonial__location">Local Austria</p>
-              <p class="testimonial__date">Today</p>
+      <div class="testimonials-background">
+        <section class="testimonials">
+          <h3 class="testiomonials__heading">Testimonials</h3>
+          <div class="testimonials-wrapper">
+            <div class="testimonial">
+              <div class="testimonial__header">
+                <img
+                  src="../../assets/icons/user_icon.svg"
+                  alt="User"
+                  class="testimonial__image"
+                />
+                <p class="testimonial__name">Michael John</p>
+                <p class="testimonial__location">Local Austria</p>
+                <p class="testimonial__date">Today</p>
+              </div>
+              <p class="testimonial__text">
+                The best online zoo I’ve met. My son delighted very much ljves
+                to watch gouillas. Online zoo is one jf the ways to instill a
+                love for animals.The best online zoo I’ve met. My son delighted
+                very much ljves to watch gouillas. Online zoo is one jf the ways
+                to instill a love for animals. The best online zoo I’ve met. My
+                son delighted very much ljves to watch gouillas. Online zoo is
+                one jf the ways to instill a love for animals.The best online
+                zoo I’ve met. My son delighted very much ljves to watch
+                gouillas. Online zoo is one jf the ways to instill a love for
+                animals.
+              </p>
             </div>
-            <p class="testimonial__text">
-              The best online zoo I’ve met. My son delighted very much ljves to
-              watch gouillas. Online zoo is one jf the ways to instill a love
-              for animals.The best online zoo I’ve met. My son delighted very
-              much ljves to watch gouillas. Online zoo is one jf the ways to
-              instill a love for animals. The best online zoo I’ve met. My son
-              delighted very much ljves to watch gouillas. Online zoo is one jf
-              the ways to instill a love for animals.The best online zoo I’ve
-              met. My son delighted very much ljves to watch gouillas. Online
-              zoo is one jf the ways to instill a love for animals.
-            </p>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial__header">
-              <img
-                src="../../assets/icons/user_icon.svg"
-                alt="User"
-                class="testimonial__image"
-              />
-              <p class="testimonial__name">Oskar Samborsky</p>
-              <p class="testimonial__location">Local Austria</p>
-              <p class="testimonial__date">Yesterday</p>
+            <div class="testimonial">
+              <div class="testimonial__header">
+                <img
+                  src="../../assets/icons/user_icon.svg"
+                  alt="User"
+                  class="testimonial__image"
+                />
+                <p class="testimonial__name">Oskar Samborsky</p>
+                <p class="testimonial__location">Local Austria</p>
+                <p class="testimonial__date">Yesterday</p>
+              </div>
+              <p class="testimonial__text">
+                Online zoo is one jf the ways to instill a love for animals.The
+                best online zoo I’ve met. My son delighted very much ljves to
+                watch gouillas. Online zoo is one jf the ways to instill a love
+                for animals.The best online zoo I’ve met. My son delighted very
+                much ljves to watch gouillas. The best online zoo I’ve met. My
+                son delighted very much ljves to watch gouillas. Online zoo is
+                one jf the ways to instill a love for animals.The best online
+                zoo I’ve met. My son delighted very much ljves to watch
+                gouillas. Online zoo is one jf the ways to instill a love for
+                animals. The best online zoo I’ve met. My son delighted very
+                much ljves to watch gouillas. Online zoo is one jf the ways to
+                instill a love for animals.The best online zoo I’ve met. My son
+                delighted very much ljves to watch gouillas. Online zoo is one
+                jf the ways to instill a love for animals.
+              </p>
             </div>
-            <p class="testimonial__text">
-              Online zoo is one jf the ways to instill a love for animals.The
-              best online zoo I’ve met. My son delighted very much ljves to
-              watch gouillas. Online zoo is one jf the ways to instill a love
-              for animals.The best online zoo I’ve met. My son delighted very
-              much ljves to watch gouillas. The best online zoo I’ve met. My son
-              delighted very much ljves to watch gouillas. Online zoo is one jf
-              the ways to instill a love for animals.The best online zoo I’ve
-              met. My son delighted very much ljves to watch gouillas. Online
-              zoo is one jf the ways to instill a love for animals. The best
-              online zoo I’ve met. My son delighted very much ljves to watch
-              gouillas. Online zoo is one jf the ways to instill a love for
-              animals.The best online zoo I’ve met. My son delighted very much
-              ljves to watch gouillas. Online zoo is one jf the ways to instill
-              a love for animals.
-            </p>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial__header">
-              <img
-                src="../../assets/icons/user_icon.svg"
-                alt="User"
-                class="testimonial__image"
-              />
-              <p class="testimonial__name">Fredericka Michelin</p>
-              <p class="testimonial__location">Local Austria</p>
-              <p class="testimonial__date">Yesterday</p>
+            <div class="testimonial">
+              <div class="testimonial__header">
+                <img
+                  src="../../assets/icons/user_icon.svg"
+                  alt="User"
+                  class="testimonial__image"
+                />
+                <p class="testimonial__name">Fredericka Michelin</p>
+                <p class="testimonial__location">Local Austria</p>
+                <p class="testimonial__date">Yesterday</p>
+              </div>
+              <p class="testimonial__text">
+                The best online zoo I’ve met. My son delighted very much ljves
+                to watch gouillas. Online zoo is one jf the ways to instill a
+                love for animals.The best online zoo I’ve met. My son delighted
+                very much ljves to watch gouillas. Online zoo is one jf the ways
+                to instill a love for animals. The best online zoo I’ve met. My
+                son delighted very much ljves to watch gouillas. Online zoo is
+                one jf the ways to instill a love for animals.The best online
+                zoo I’ve met. The best online zoo I’ve met. My son delighted
+                very much ljves to watch gouillas. Online zoo is one jf the ways
+                to instill a love for animals.The best online zoo I’ve met. My
+                son delighted very much ljves to watch gouillas. Online zoo is
+                one jf the ways to instill a love for animals.
+              </p>
             </div>
-            <p class="testimonial__text">
-              The best online zoo I’ve met. My son delighted very much ljves to
-              watch gouillas. Online zoo is one jf the ways to instill a love
-              for animals.The best online zoo I’ve met. My son delighted very
-              much ljves to watch gouillas. Online zoo is one jf the ways to
-              instill a love for animals. The best online zoo I’ve met. My son
-              delighted very much ljves to watch gouillas. Online zoo is one jf
-              the ways to instill a love for animals.The best online zoo I’ve
-              met. The best online zoo I’ve met. My son delighted very much
-              ljves to watch gouillas. Online zoo is one jf the ways to instill
-              a love for animals.The best online zoo I’ve met. My son delighted
-              very much ljves to watch gouillas. Online zoo is one jf the ways
-              to instill a love for animals.
-            </p>
-          </div>
-          <div class="testimonial">
-            <div class="testimonial__header">
-              <img
-                src="../../assets/icons/user_icon.svg"
-                alt="User"
-                class="testimonial__image"
-              />
-              <p class="testimonial__name">Mila Riksha</p>
-              <p class="testimonial__location">Local Austria</p>
-              <p class="testimonial__date">Yesterday</p>
+            <div class="testimonial">
+              <div class="testimonial__header">
+                <img
+                  src="../../assets/icons/user_icon.svg"
+                  alt="User"
+                  class="testimonial__image"
+                />
+                <p class="testimonial__name">Mila Riksha</p>
+                <p class="testimonial__location">Local Austria</p>
+                <p class="testimonial__date">Yesterday</p>
+              </div>
+              <p class="testimonial__text">
+                My son delighted very much ljves to watch gouillas. Online zoo
+                is one jf the ways to instill a love for animals.The best online
+                zoo I’ve met. My son delighted very much ljves to watch
+                gouillas. Online zoo is one jf the ways to instill a love for
+                animals.The best online zoo I’ve met. My son delighted very much
+                ljves to watch gouillas. Online zoo is one jf the ways to
+                instill a love for animals.The best online zoo I’ve met. My son
+                delighted very much ljves to watch gouillas. The best online zoo
+                I’ve met. My son delighted very much ljves to watch gouillas.
+                Online zoo is one jf the ways to instill a love for animals.The
+                best online zoo I’ve met. My son delighted very much ljves to
+                watch gouillas. Online zoo is one jf the ways to instill a love
+                for animals.
+              </p>
             </div>
-            <p class="testimonial__text">
-              My son delighted very much ljves to watch gouillas. Online zoo is
-              one jf the ways to instill a love for animals.The best online zoo
-              I’ve met. My son delighted very much ljves to watch gouillas.
-              Online zoo is one jf the ways to instill a love for animals.The
-              best online zoo I’ve met. My son delighted very much ljves to
-              watch gouillas. Online zoo is one jf the ways to instill a love
-              for animals.The best online zoo I’ve met. My son delighted very
-              much ljves to watch gouillas. The best online zoo I’ve met. My son
-              delighted very much ljves to watch gouillas. Online zoo is one jf
-              the ways to instill a love for animals.The best online zoo I’ve
-              met. My son delighted very much ljves to watch gouillas. Online
-              zoo is one jf the ways to instill a love for animals.
-            </p>
           </div>
-        </div>
-      </section>
+          <button class="testimonials__button btn-rectangular">
+            leave feedback
+          </button>
+        </section>
+      </div>
       <footer class="footer"></footer>
     </main>
   </body>
