feat: add anything to footer

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -437,7 +437,41 @@
           </button>
         </section>
       </div>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <a href="#">
+          <div class="header__logo">
+            <p class="header__title">PetStory Online</p>
+            <img
+              src="../../assets/icons/bamboo.png"
+              alt=""
+              class="header__logo-img"
+            />
+          </div>
+        </a>
+        <button class="footer__button btn-rectangular">
+          Donate for volunteers
+        </button>
+        <input type="email" placeholder="Enter your email" required />
+        <input type="Submit" />
+        <div class="header__content--left">
+          <nav class="header__navigation">
+            <li class="header__navigation-link header__navigation-link--active">
+              <a href="#">About</a>
+            </li>
+            <li class="header__navigation-link"><a href="#">Map</a></li>
+            <li class="header__navigation-link"><a href="#">Zoos</a></li>
+            <li class="header__navigation-link"><a href="#">Donate</a></li>
+            <li class="header__navigation-link"><a href="#">Contact us</a></li>
+          </nav>
+        </div>
+        <div class="header__content--right">
+          <a
+            href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1"
+            class="header__attribution"
+            >Designed by ©</a
+          >
+        </div>
+      </footer>
     </main>
   </body>
 </html>
