feat.: css for donate page

--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <div class="header__content">
         <div class="header__content--left">
-          <a href="#">
+          <a href="https://kmnkat.github.io/online-zoo/pages/main/">
             <div class="header__logo">
               <h1 class="header__title">PetStory Online</h1>
               <img
@@ -28,11 +28,17 @@
           </a>
           <nav class="header__navigation">
             <li class="header__navigation-link header__navigation-link--active">
-              <a href="#">About</a>
+              <a href="https://kmnkat.github.io/online-zoo/pages/main/"
+                >About</a
+              >
             </li>
             <li class="header__navigation-link"><a href="#">Map</a></li>
             <li class="header__navigation-link"><a href="#">Zoos</a></li>
-            <li class="header__navigation-link"><a href="#">Donate</a></li>
+            <li class="header__navigation-link">
+              <a href="https://kmnkat.github.io/online-zoo/pages/donate/"
+                >Donate</a
+              >
+            </li>
             <li class="header__navigation-link"><a href="#">Contact us</a></li>
           </nav>
         </div>
@@ -48,128 +54,255 @@
     <main>
       <section class="donate__panda-header"></section>
       <section class="donate">
-        <div class="donate__purpose">
-          <h1 class="donate__header-big">
-            THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!
-          </h1>
-          <p class="donate__copy">
-            Even though the Zoo has been able to reopen, we are at a greatly
-            reduced capacity with educational programs and public and private
-            events cancelled or postponed for additional months. We need you now
-            more than ever to help ensure that we overcome these challenges. We
-            have been actively raising funds in the community, and we are
-            grateful for the generosity. But much more support is still needed,
-            and we need your help! Please consider a gift today – no matter what
-            size – to help us sustain our mission.
-          </p>
-          <h2 class="donate__header-smaller">Donation Information</h2>
-        </div>
-        <div class="donate__calculator">
-          <h1 class="donate__header-big-orange">Pick and feed a friend</h1>
-          <p class="donate__copy--big">
-            We know the animals bring you joy, and in these extraordinary times,
-            we’re glad.
-          </p>
-          <div class="donate__calculator-panda">
-            <div class="calculator-panda__number">
-              <span class="calculator-panda__number-number">4</span>
-              <span class="calculator-panda__number-per"
-                >Panda diet for the day.</span
-              >
-            </div>
-            <div class="calculator-panda__multiplication">
-              <img
-                src="../../assets/icons/x.svg"
-                alt="X"
-                class="calculator-panda__multiplication-left"
-              />
-              <img
-                src="../../assets/icons/x.svg"
-                alt="X"
-                class="calculator-panda__multiplication-right"
-              />
-            </div>
-            <div class="calculator-panda__panda-icon">
-              <img
-                src="../../assets/icons/animals-widget.svg"
-                alt="Panda"
-                class="calculator-panda__panda-icon-image"
-              />
-            </div>
-          </div>
-          <form action="#" class="donate__form">
-            <div class="donate__form-progress">
-              <div class="donate__form-line"></div>
-              <div class="donate__form-dots">
-                <div class="donate__form-dot"></div>
-                <div class="donate__form-dot donate__form-dot--chosen"></div>
-                <div class="donate__form-dot"></div>
-                <div class="donate__form-dot"></div>
-                <div class="donate__form-dot"></div>
-                <div class="donate__form-dot"></div>
-                <div class="donate__form-dot"></div>
-              </div>
-              <div class="donate__form-labels">
-                <div class="donate__form-label">$2000</div>
-                <div class="donate__form-label donate__form-label--chosen">
-                  $1000
-                </div>
-                <div class="donate__form-label">$500</div>
-                <div class="donate__form-label">$100</div>
-                <div class="donate__form-label">$50</div>
-                <div class="donate__form-label">$25</div>
-              </div>
-            </div>
-            <input type="number" class="donate__form-another-am" />
-            <input
-              type="radio"
-              id="monthly"
-              name="donate__form-frequency"
-              value="monthly"
-            />
-            <label for="monthly">Monthly</label>
-            <input type="radio" id="once" name="fav_language" value="once" />
-            <label for="once">Once</label>
-            <button class="big-button" type="submit">Feed a friend now</button>
-            <p class="donate__form-share">
-              Share with your friends on social networks
+        <div class="donate__content">
+          <div class="donate__purpose">
+            <h1 class="donate__header-big">
+              THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!
+            </h1>
+            <p class="donate__copy">
+              Even though the Zoo has been able to reopen, we are at a greatly
+              reduced capacity with educational programs and public and private
+              events cancelled or postponed for additional months. We need you
+              now more than ever to help ensure that we overcome these
+              challenges. We have been actively raising funds in the community,
+              and we are grateful for the generosity. But much more support is
+              still needed, and we need your help! Please consider a gift today
+              – no matter what size – to help us sustain our mission.
             </p>
-          </form>
+            <h2 class="donate__header-big donate__header-smaller">
+              Donation Information
+            </h2>
+          </div>
+          <div class="donate__calculator">
+            <h1 class="donate__header-big-orange">Pick and feed a friend</h1>
+            <p class="donate__copy--big">
+              We know the animals bring you joy, and in these extraordinary
+              times, we’re glad.
+            </p>
+            <div class="donate__calculator-panda">
+              <div class="calculator-panda__number">
+                <span class="calculator-panda__number-number">4</span>
+                <span class="calculator-panda__number-per"
+                  >Panda diet for the day.</span
+                >
+              </div>
+              <div class="calculator-panda__multiplication">
+                <img
+                  src="../../assets/icons/x.svg"
+                  alt="X"
+                  class="calculator-panda__multiplication-left"
+                />
+                <img
+                  src="../../assets/icons/x.svg"
+                  alt="X"
+                  class="calculator-panda__multiplication-right"
+                />
+              </div>
+              <div class="calculator-panda__panda-icon">
+                <img
+                  src="../../assets/icons/animals-widget.svg"
+                  alt="Panda"
+                  class="calculator-panda__panda-icon-image"
+                />
+              </div>
+            </div>
+
+            <form action="#" class="donate__form">
+              <p class="form__descr">Amount</p>
+              <div class="donate__form-progress">
+                <div class="donate__progress-bg">
+                  <div class="donate__form-line"></div>
+                  <div class="donate__form-dots">
+                    <div class="dot-clickable">
+                      <div class="donate__form-dot"></div>
+                    </div>
+                    <div class="dot-clickable">
+                      <div
+                        class="donate__form-dot donate__form-dot--chosen"
+                      ></div>
+                    </div>
+                    <div class="dot-clickable">
+                      <div class="donate__form-dot"></div>
+                    </div>
+                    <div class="dot-clickable">
+                      <div class="donate__form-dot"></div>
+                    </div>
+                    <div class="dot-clickable">
+                      <div class="donate__form-dot"></div>
+                    </div>
+                    <div class="dot-clickable">
+                      <div class="donate__form-dot"></div>
+                    </div>
+                    <div class="dot-clickable">
+                      <div class="donate__form-dot"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="donate__form-labels">
+                  <div class="donate__form-label">$2000</div>
+                  <div class="donate__form-label donate__form-label--chosen">
+                    $1000
+                  </div>
+                  <div class="donate__form-label">$500</div>
+                  <div class="donate__form-label">$250</div>
+                  <div class="donate__form-label">$100</div>
+                  <div class="donate__form-label">$50</div>
+                  <div class="donate__form-label">$25</div>
+                </div>
+              </div>
+              <div class="input-wrapper">
+                <input
+                  type="number"
+                  placeholder="Another amount"
+                  class="donate__form-another-am"
+                />
+                <img
+                  src="../../assets//icons/dollar.svg"
+                  alt="dollar"
+                  class="currencyinput"
+                />
+              </div>
+
+              <div class="radio-btns">
+                <input
+                  type="radio"
+                  id="monthly"
+                  name="donate__form-frequency"
+                  value="monthly"
+                  maxlength="10"
+                />
+                <label for="monthly">Monthly</label>
+                <input
+                  type="radio"
+                  id="once"
+                  checked="checked"
+                  name="donate__form-frequency"
+                  value="once"
+                />
+                <label for="once"> <span class="checkmark"></span> Once</label>
+              </div>
+              <button class="big-button donate__btn" type="submit">
+                Feed a friend now
+              </button>
+              <p class="donate__form-share">
+                Share with your friends on social networks
+              </p>
+            </form>
+          </div>
         </div>
       </section>
       <footer class="footer">
-        <a href="#">
-          <div class="header__logo">
-            <p class="header__title">PetStory Online</p>
-            <img
-              src="../../assets/icons/bamboo.png"
-              alt=""
-              class="header__logo-img"
-            />
+        <div class="footer-content">
+          <div class="footer-content__upper">
+            <a href="https://kmnkat.github.io/online-zoo/pages/main/">
+              <div class="header__logo">
+                <p class="header__title">PetStory Online</p>
+                <img
+                  src="../../assets/icons/bamboo.png"
+                  alt=""
+                  class="header__logo-img"
+                />
+              </div>
+            </a>
+            <form action="#">
+              <h3 class="subscribe-text">Subscribe to our news</h3>
+              <input
+                type="email"
+                placeholder="Enter your email"
+                required
+                class="input-footer"
+              />
+              <input type="Submit" class="subscribe-btn" />
+            </form>
           </div>
-        </a>
-        <button class="footer__button btn-rectangular">
-          Donate for volunteers
-        </button>
-        <input type="email" placeholder="Enter your email" required />
-        <input type="Submit" />
-        <div class="header__content--left">
-          <nav class="header__navigation">
-            <li class="header__navigation-link header__navigation-link--active">
-              <a href="#">About</a>
-            </li>
-            <li class="header__navigation-link"><a href="#">Map</a></li>
-            <li class="header__navigation-link"><a href="#">Zoos</a></li>
-            <li class="header__navigation-link"><a href="#">Donate</a></li>
-            <li class="header__navigation-link"><a href="#">Contact us</a></li>
-          </nav>
-        </div>
-        <div class="header__content--right">
-          <a
-            href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1"
-            class="header__attribution"
-            >Designed by ©</a
-          >
+          <div class="footer-content__middle">
+            <a href="https://kmnkat.github.io/online-zoo/pages/donate/"
+              ><button class="footer__button btn-rectangular">
+                Donate for volunteers
+              </button></a
+            >
+          </div>
+          <div class="footer-content__bottom">
+            <div class="bottom__socials">
+              <div class="one-social">
+                <div class="icon-wrapper">
+                  <img
+                    src="../../assets/icons/facebook.svg"
+                    alt="Facebook"
+                    class="social-icon"
+                  />
+                </div>
+                <p class="social-name">Facebook</p>
+              </div>
+              <div class="one-social">
+                <div class="icon-wrapper">
+                  <img
+                    src="../../assets/icons/twitter.svg"
+                    alt="Twitter"
+                    class="social-icon"
+                  />
+                </div>
+                <p class="social-name">Twitter</p>
+              </div>
+              <div class="one-social">
+                <div class="icon-wrapper">
+                  <img
+                    src="../../assets/icons/instagram.svg"
+                    alt="Instagram"
+                    class="social-icon"
+                  />
+                </div>
+                <p class="social-name">Instagram</p>
+              </div>
+              <div class="one-social">
+                <div class="icon-wrapper">
+                  <img
+                    src="../../assets/icons/youtube.svg"
+                    alt="YouTube"
+                    class="social-icon"
+                  />
+                </div>
+                <p class="social-name">YouTube</p>
+              </div>
+            </div>
+            <div class="bottom__nav">
+              <div class="header__content--left">
+                <nav class="header__navigation">
+                  <li class="header__navigation-link">
+                    <a href="https://kmnkat.github.io/online-zoo/pages/main/"
+                      >About</a
+                    >
+                  </li>
+                  <li class="header__navigation-link"><a href="#">Map</a></li>
+                  <li class="header__navigation-link"><a href="#">Zoos</a></li>
+                  <li class="header__navigation-link">
+                    <a href="https://kmnkat.github.io/online-zoo/pages/donate/"
+                      >Donate</a
+                    >
+                  </li>
+                  <li class="header__navigation-link">
+                    <a href="#">Contact us</a>
+                  </li>
+                </nav>
+              </div>
+            </div>
+            <div class="botton__design">
+              <div class="header__content--right footer-copyrights">
+                <a
+                  href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1"
+                  class="header__attribution"
+                  >Designed by Alisa Samborskaya</a
+                >
+              </div>
+              <div class="header__content--right footer-copyrights">
+                <a
+                  href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1"
+                  class="header__attribution"
+                  >©RSSchool & ©Yem Digital 2021</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </footer>
     </main>
