--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online zoo</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../../assets/styles/variables.css" />
+    <link rel="stylesheet" href="../../assets/styles/styles.css" />
+    <link rel="stylesheet" href="../../assets/styles/globalComponents.css" />
+    <link rel="stylesheet" href="../../assets/styles/globalSections.css" />
+    <link rel="stylesheet" href="../../assets/styles/layout.css" />
+    <link rel="stylesheet" href="../../assets/styles/typography.css" />
+    <link rel="stylesheet" href="../../assets/styles/buttonsAndLinks.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,11 +20,11 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__content">
+      <div class="header__content FONT-normal FONT-medium-font-weight">
         <div class="header__content--left">
-          <a href="#">
+          <a href="https://kmnkat.github.io/online-zoo/pages/main/">
             <div class="header__logo">
-              <h1 class="header__title">PetStory Online</h1>
+              <h1 class="header__title nav-link">PetStory Online</h1>
               <img
                 src="../../assets/icons/bamboo.png"
                 alt=""
@@ -27,17 +33,34 @@
             </div>
           </a>
           <nav class="header__navigation">
-            <li class="header__navigation-link header__navigation-link--active">
-              <a href="#">About</a>
+            <li class="header__navigation-link">
+              <a
+                class="nav-link active-page"
+                href="https://kmnkat.github.io/online-zoo/pages/main/"
+                >About</a
+              >
             </li>
-            <li class="header__navigation-link"><a href="#">Map</a></li>
-            <li class="header__navigation-link"><a href="#">Zoos</a></li>
-            <li class="header__navigation-link"><a href="#">Donate</a></li>
-            <li class="header__navigation-link"><a href="#">Contact us</a></li>
+            <li class="header__navigation-link">
+              <a class="nav-link" href="#">Map</a>
+            </li>
+            <li class="header__navigation-link">
+              <a class="nav-link" href="#">Zoos</a>
+            </li>
+            <li class="header__navigation-link">
+              <a
+                class="nav-link"
+                href="https://kmnkat.github.io/online-zoo/pages/donate/"
+                >Donate</a
+              >
+            </li>
+            <li class="header__navigation-link">
+              <a class="nav-link" href="#">Contact us</a>
+            </li>
           </nav>
         </div>
-        <div class="header__content--right">
+        <div class="header__content--right FONT-normal">
           <a
+            class="nav-link"
             href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1"
             class="header__attribution"
             >Designed by ©</a
@@ -438,38 +461,117 @@
         </section>
       </div>
       <footer class="footer">
-        <a href="#">
-          <div class="header__logo">
-            <p class="header__title">PetStory Online</p>
-            <img
-              src="../../assets/icons/bamboo.png"
-              alt=""
-              class="header__logo-img"
-            />
+        <div class="footer-content">
+          <div class="footer-content__upper">
+            <a class="nav-link" href="https://kmnkat.github.io/online-zoo/pages/main/">
+              <div class="header__logo">
+                <p class="header__title">PetStory Online</p>
+                <img
+                  src="../../assets/icons/bamboo.png"
+                  alt=""
+                  class="header__logo-img"
+                />
+              </div>
+            </a>
+            <form action="#">
+              <h3 class="subscribe-text">Subscribe to our news</h3>
+              <input
+                type="email"
+                placeholder="Enter your email"
+                required
+                class="input-footer input-field"
+              />
+              <button type="Submit" class="subscribe-btn submit-btn" />Submit</button>
+            </form>
           </div>
-        </a>
-        <button class="footer__button btn-rectangular">
-          Donate for volunteers
-        </button>
-        <input type="email" placeholder="Enter your email" required />
-        <input type="Submit" />
-        <div class="header__content--left">
-          <nav class="header__navigation">
-            <li class="header__navigation-link header__navigation-link--active">
-              <a href="#">About</a>
-            </li>
-            <li class="header__navigation-link"><a href="#">Map</a></li>
-            <li class="header__navigation-link"><a href="#">Zoos</a></li>
-            <li class="header__navigation-link"><a href="#">Donate</a></li>
-            <li class="header__navigation-link"><a href="#">Contact us</a></li>
-          </nav>
-        </div>
-        <div class="header__content--right">
-          <a
-            href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1"
-            class="header__attribution"
-            >Designed by ©</a
-          >
+          <div class="footer-content__middle">
+            <a href="https://kmnkat.github.io/online-zoo/pages/donate/"
+              ><button class="footer__button btn-rectangular FONT-normal">
+                Donate for volunteers
+              </button></a
+            >
+          </div>
+          <div class="footer-content__bottom">
+            <div class="bottom__socials FONT-normal">
+              <div class="one-social icon-and-text">
+                <div class="icon-wrapper">
+                  <img
+                    src="../../assets/icons/facebook.svg"
+                    alt="Facebook"
+                    class="social-icon"
+                  />
+                </div>
+                <a class="social-name" href=#>Facebook</a>
+              </div>
+              <div class="one-social icon-and-text">
+                <div class="icon-wrapper">
+                  <img
+                    src="../../assets/icons/twitter.svg"
+                    alt="Twitter"
+                    class="social-icon"
+                  />
+                </div>
+                <a class="social-name" href=#>Twitter</a>
+              </div>
+              <div class="one-social icon-and-text">
+                <div class="icon-wrapper">
+                  <img
+                    src="../../assets/icons/instagram.svg"
+                    alt="Instagram"
+                    class="social-icon"
+                  />
+                </div>
+                <a class="social-name" href=#>Instagram</a>
+              </div>
+              <div class="one-social icon-and-text">
+                <div class="icon-wrapper">
+                  <img
+                    src="../../assets/icons/youtube.svg"
+                    alt="YouTube"
+                    class="social-icon"
+                  />
+                </div>
+                <a class="social-name" href=#>YouTube</a>
+              </div>
+            </div>
+            <div class="bottom__nav">
+              
+                <nav class="header__navigation FONT-normal">
+                  <li class="header__navigation-link">
+                    <a class="nav-link active-page" href="https://kmnkat.github.io/online-zoo/pages/main/"
+                      >About</a
+                    >
+                  </li>
+                  <li class="header__navigation-link"><a  class="nav-link" href="#">Map</a></li>
+                  <li class="header__navigation-link"><a  class="nav-link" href="#">Zoos</a></li>
+                  <li class="header__navigation-link">
+                    <a  class="nav-link " href="https://kmnkat.github.io/online-zoo/pages/donate/"
+                      >Donate</a
+                    >
+                  </li>
+                  <li class="header__navigation-link">
+                    <a  class="nav-link" href="#">Contact us</a>
+                  </li>
+                </nav>
+              
+            </div>
+            <div class="botton__design">
+              <div class="FONT-normal FONT-light">
+                <a
+                  href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1"
+                  class="header__attribution nav-link"
+                  >Designed by Alisa Samborskaya</a
+                >
+              </div>
+              <div class="FONT-normal FONT-light">
+                <a
+                  href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks?node-id=0%3A1"
+                  class="header__attribution  nav-link"
+                  >©RSSchool & ©Yem Digital 2021</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </footer>
     </main>
