fix: code refactor - main page part 1

--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -94,7 +94,7 @@
               Donation Information
             </h2>
           </div>
-          <div class="donate__calculator">
+          <div class="donate__calculator white-transparent-background-section">
             <h1
               class="donate__header-big-orange FONT-subheader-big FONT-subheader-superbig margin-after-middle"
             >
