fix: code refactor testimonials

--- a/pages/donate/index.html
+++ b/pages/donate/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../../assets/styles/globalSections.css" />
     <link rel="stylesheet" href="../../assets/styles/layout.css" />
     <link rel="stylesheet" href="../../assets/styles/typography.css" />
+    <link rel="stylesheet" href="../../assets/styles/media.css" />
 
     <link rel="stylesheet" href="../../assets/styles/buttonsAndLinks.css" />
 
