--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../../assets/styles/layout.css" />
     <link rel="stylesheet" href="../../assets/styles/typography.css" />
     <link rel="stylesheet" href="../../assets/styles/buttonsAndLinks.css" />
+    <link rel="stylesheet" href="../../assets/styles/media.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -280,7 +281,7 @@
           </button>
         </section>
       </div>
-      <section class="pick-and-feed padding-section-big">
+      <section class="margin-after-big pick-and-feed padding-section-big">
         <div
           class="pick-and-feed__frame white-transparent-background-section center-block-content"
         >
@@ -372,19 +373,21 @@
         </div>
       </section>
       <div class="testimonials-background">
-        <section class="testimonials">
-          <h3 class="testiomonials__heading">Testimonials</h3>
-          <div class="testimonials-wrapper">
-            <div class="testimonial">
+        <section class="testimonials center-block-content padding-section-big">
+          <h3 class="testiomonials__heading FONT-big margin-after-big">
+            Testimonials
+          </h3>
+          <div class="testimonials-wrapper margin-after-middle">
+            <div class="testimonial FONT-light">
               <div class="testimonial__header">
-                <img
-                  src="../../assets/icons/user_icon.svg"
-                  alt="User"
-                  class="testimonial__image"
-                />
+                <div
+                  class="testimonial__header-image-wrapper"
+                  style="
+                    background-image: url('../../assets/icons/user_icon.svg');
+                  "
+                ></div>
                 <p class="testimonial__name">Michael John</p>
-                <p class="testimonial__location">Local Austria</p>
-                <p class="testimonial__date">Today</p>
+                <p class="testimonial__detailed-info">Local Austria • Today</p>
               </div>
               <p class="testimonial__text">
                 The best online zoo I’ve met. My son delighted very much ljves
@@ -399,16 +402,18 @@
                 animals.
               </p>
             </div>
-            <div class="testimonial">
+            <div class="testimonial FONT-light">
               <div class="testimonial__header">
-                <img
-                  src="../../assets/icons/user_icon.svg"
-                  alt="User"
-                  class="testimonial__image"
-                />
+                <div
+                  class="testimonial__header-image-wrapper"
+                  style="
+                    background-image: url('../../assets/images/oskar.jpeg');
+                  "
+                ></div>
                 <p class="testimonial__name">Oskar Samborsky</p>
-                <p class="testimonial__location">Local Austria</p>
-                <p class="testimonial__date">Yesterday</p>
+                <p class="testimonial__detailed-info">
+                  Local Austria • Yesterday
+                </p>
               </div>
               <p class="testimonial__text">
                 Online zoo is one jf the ways to instill a love for animals.The
@@ -427,16 +432,18 @@
                 jf the ways to instill a love for animals.
               </p>
             </div>
-            <div class="testimonial">
+            <div class="testimonial FONT-light">
               <div class="testimonial__header">
-                <img
-                  src="../../assets/icons/user_icon.svg"
-                  alt="User"
-                  class="testimonial__image"
-                />
+                <div
+                  class="testimonial__header-image-wrapper"
+                  style="
+                    background-image: url('../../assets/images/fredericka.jpeg');
+                  "
+                ></div>
                 <p class="testimonial__name">Fredericka Michelin</p>
-                <p class="testimonial__location">Local Austria</p>
-                <p class="testimonial__date">Yesterday</p>
+                <p class="testimonial__detailed-info">
+                  Local Austria • Yesterday
+                </p>
               </div>
               <p class="testimonial__text">
                 The best online zoo I’ve met. My son delighted very much ljves
@@ -453,16 +460,16 @@
                 one jf the ways to instill a love for animals.
               </p>
             </div>
-            <div class="testimonial">
+            <div class="testimonial FONT-light">
               <div class="testimonial__header">
-                <img
-                  src="../../assets/icons/user_icon.svg"
-                  alt="User"
-                  class="testimonial__image"
-                />
+                <div
+                  class="testimonial__header-image-wrapper"
+                  style="background-image: url('../../assets/images/mila.jpeg')"
+                ></div>
                 <p class="testimonial__name">Mila Riksha</p>
-                <p class="testimonial__location">Local Austria</p>
-                <p class="testimonial__date">Yesterday</p>
+                <p class="testimonial__detailed-info">
+                  Local Austria • Yesterday
+                </p>
               </div>
               <p class="testimonial__text">
                 My son delighted very much ljves to watch gouillas. Online zoo
@@ -478,6 +485,31 @@
                 best online zoo I’ve met. My son delighted very much ljves to
                 watch gouillas. Online zoo is one jf the ways to instill a love
                 for animals.
+              </p>
+            </div>
+
+            <div class="testimonial FONT-light">
+              <div class="testimonial__header">
+                <div
+                  class="testimonial__header-image-wrapper"
+                  style="
+                    background-image: url('../../assets/images/michel.jpeg');
+                  "
+                ></div>
+                <p class="testimonial__name">Michael John</p>
+                <p class="testimonial__detailed-info">Local Austria • Today</p>
+              </div>
+              <p class="testimonial__text">
+                The best online zoo I’ve met. My son delighted very much ljves
+                to watch gouillas. Online zoo is one jf the ways to instill a
+                love for animals.The best online zoo I’ve met. My son delighted
+                very much ljves to watch gouillas. Online zoo is one jf the ways
+                to instill a love for animals. The best online zoo I’ve met. My
+                son delighted very much ljves to watch gouillas. Online zoo is
+                one jf the ways to instill a love for animals.The best online
+                zoo I’ve met. My son delighted very much ljves to watch
+                gouillas. Online zoo is one jf the ways to instill a love for
+                animals.
               </p>
             </div>
           </div>
